# llm-pass-through

./: .gitignore  README.md  docker-compose.yml  planning.md  tasks.md  testing-guidance.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/PromptInput/: PromptInput.test.tsx  PromptInput.tsx
frontend/src/components/ResponseDisplay/: ResponseDisplay.test.tsx  ResponseDisplay.tsx
frontend/src/pages/Home/: Home.test.tsx  Home.tsx
frontend/src/services/: apiService.ts
frontend/src/types/: api.ts
frontend/tests/: setup.ts
