[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-pass-through-backend"
version = "0.1.0"
description = "LLM Pass-Through Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn==0.23.2",
    "pydantic==2.4.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
